--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,7 @@
         "php": "^7.3|^8.0",
         "dusterio/lumen-passport": "^0.3.1",
         "flipbox/lumen-generator": "^8.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "laravel/lumen-framework": "^8.0",
-        "laravelista/lumen-vendor-publish": "^8.0"
+        "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
